I have finished with structure of the portfolio which is a fully functioning page.I will expand on it later in the Future.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Owusu Shadrack">
     <meta name="description" content="This is a simple portfolio site I built for myself when I decided to start web programming">
     <title> My Portfolio</title>
-    <link rel="icons" href="./assets/head_icon.png" type="image/ x-icon">
+    <link rel="icon" href="./assets/head_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaquerries.css">
 </head>
@@ -18,8 +18,7 @@
     <div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a href="#experince">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#experience">Experience</a></li>            <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
 
         </ul>
@@ -37,7 +36,7 @@
                 </div>
                 <div class="menu-links">
                     <li><a href="#about" onclick="toggleMenu()">About</a></li>
-                    <li><a href="#experince" onclick="toggleMenu()">Experience</a></li>
+                    <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
                     <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
                     <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>  
                 </div>
@@ -307,7 +306,7 @@
     <img src="./assets/arrow.png" 
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#projects'">
+        onclick="location.href='./#contact'">
          
   </section>
 
@@ -332,6 +331,18 @@
     </div>
   </section>
   <!-- The Footer section  1:54:08-->
+
+  <footer> 
+    <nav class="nav-links-container">
+        <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+
+        </ul> 
+    </nav>
+    <p>Copyright &#169; 2025 Owusu Shadrack.All rights Reserved.</p>
+  </footer>
     <script src="script.js"></script>
 </body>
 </html>
